--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <div id="header">
   <h1>Brian Dean - Code Fellows</h1>
   <h2>GitHub home page for Code Fellows content</h2>
+  <p>Part 1: <a href="uxtest-slicedpage.html", alt="Codefellows test part1", target="_blank">Sliced web page</a></p>
+  <p>Part 2: <a href="uxtest-activechecklist.html", alt="Codefellows test part1", target="_blank">Interactive sliced web page</a></p>
+
   </div>
 </body>
 
