--- a/index.html
+++ b/index.html
@@ -7,23 +7,35 @@
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  
  <style type="text/css">
- body {background-color:#121212; color:#fff;}
+ body {background-color:#111; color:#fff;}
  h1 {font-family: "Arial Black"; font-size:22px;}
  h2 {font-family: Arial, Courier; font-size:17px;}
+ p {font-family: Arial, Courier;}
+ a {color: #FC1501;}
 
- #header {width:200px; float:left;}
+#wrapper {width:820px; margin-right:auto; margin-left:auto; background-color:#555;}
+ #header {width:800px; padding:5px; margin-right:auto; margin-left:auto; background-color:#333;}
+ #main {height:890px; padding:5px;}
  </style>
  
 </head>
 
 <body>
+<div id="wrapper">
+
 <div id="header">
   <h1>Brian Dean - Code Fellows</h1>
   <h2>GitHub home page for Code Fellows content</h2>
+</div>
+
+<div id="main">
+<h2>UX Engineering Bootcamp test files, completed 3/4/2014:</h2>
   <p>Part 1: <a href="uxtest-slicedpage.html", alt="Codefellows test part1", target="_blank">Sliced web page</a></p>
   <p>Part 2: <a href="uxtest-activechecklist.html", alt="Codefellows test part1", target="_blank">Interactive sliced web page</a></p>
+</div>
 
-  </div>
+</div>
+  
 </body>
 
 </html>
