--- a/uxtest-activechecklist.html
+++ b/uxtest-activechecklist.html
@@ -16,39 +16,39 @@
 	</tr>
 	<tr>
 		<td>
-			<img id="cb01" src="images/cb01.jpg" width="609" height="45" alt="cb01" title="cb01"></td>
+			<img id="cb01" src="images/cb01.jpg" width="609" height="45" alt="cb01" title="Click to check off your list"></td>
 		<td>
-			<img id="cb07" src="images/cb07.jpg" width="631" height="45" alt="cb07" title="cb07"></td>
+			<img id="cb07" src="images/cb07.jpg" width="631" height="45" alt="cb07" title="Click to check off your list"></td>
 	</tr>
 	<tr>
 		<td>
-			<img id="cb02" src="images/cb02.jpg" width="609" height="30" alt="cb02" title="cb02"></td>
+			<img id="cb02" src="images/cb02.jpg" width="609" height="30" alt="cb02" title="Click to check off your list"></td>
 		<td>
-			<img id="cb08" src="images/cb08.jpg" width="631" height="30" alt="cb08" title="cb08"></td>
+			<img id="cb08" src="images/cb08.jpg" width="631" height="30" alt="cb08" title="Click to check off your list"></td>
 	</tr>
 	<tr>
 		<td>
-			<img id="cb03" src="images/cb03.jpg" width="609" height="29" alt="cb03" title="cb03"></td>
+			<img id="cb03" src="images/cb03.jpg" width="609" height="29" alt="cb03" title="Click to check off your list"></td>
 		<td>
-			<img id="cb09" src="images/cb09.jpg" width="631" height="29" alt="cb09" title="cb09"></td>
+			<img id="cb09" src="images/cb09.jpg" width="631" height="29" alt="cb09" title="Click to check off your list"></td>
 	</tr>
 	<tr>
 		<td>
-			<img id="cb04" src="images/cb04.jpg" width="609" height="33" alt="cb04" title="cb04"></td>
+			<img id="cb04" src="images/cb04.jpg" width="609" height="33" alt="cb04" title="Click to check off your list"></td>
 		<td>
-			<img id="cb10" src="images/cb10.jpg" width="631" height="33" alt="cb10" title="cb10"></td>
+			<img id="cb10" src="images/cb10.jpg" width="631" height="33" alt="cb10" title="Click to check off your list"></td>
 	</tr>
 	<tr>
 		<td>
-			<img id="cb05" src="images/cb05.jpg" width="609" height="34" alt="cb05" title="cb05"></td>
+			<img id="cb05" src="images/cb05.jpg" width="609" height="34" alt="cb05" title="Click to check off your list"></td>
 		<td>
-			<img id="cb11" src="images/cb11.jpg" width="631" height="34" alt="cb11" title="cb11"></td>
+			<img id="cb11" src="images/cb11.jpg" width="631" height="34" alt="cb11" title="Click to check off your list"></td>
 	</tr>
 	<tr>
 		<td>
-			<img id="cb06" src="images/cb06.jpg" width="609" height="65" alt="cb06" title="cb06"></td>
+			<img id="cb06" src="images/cb06.jpg" width="609" height="65" alt="cb06" title="Click to check off your list"></td>
 		<td>
-			<img id="cb12" src="images/cb12.jpg" width="631" height="65" alt="cb12" title="cb12"></td>
+			<img id="cb12" src="images/cb12.jpg" width="631" height="65" alt="cb12" title="Click to check off your list"></td>
 	</tr>
 	<tr>
 		<td colspan="2">
