Edit to further clarify index page..
.. for my Code Fellows repository home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
  <style type="text/css">
  body {background-color:#111; color:#fff;}
- h1 {font-family: "Arial Black"; font-size:22px;}
+ h1 {font-family: "Arial Black"; font-size:26px;}
  h2 {font-family: Arial, Courier; font-size:17px;}
  p {font-family: Arial, Courier;}
  a {color: #FC1501;}
@@ -30,8 +30,9 @@
 
 <div id="main">
 <h2>UX Engineering Bootcamp test files, completed 3/4/2014:</h2>
-  <p>Part 1: <a href="uxtest-slicedpage.html", alt="Codefellows test part1", target="_blank">Sliced web page</a></p>
-  <p>Part 2: <a href="uxtest-activechecklist.html", alt="Codefellows test part1", target="_blank">Interactive sliced web page</a></p>
+  <p>Part 1: <a href="uxtest-slicedpage.html", alt="Codefellows test part1", target="_blank">Sliced web page</a><br />Assignment: to make screenshot of web page for chocolate pizza recipe into an HTML page of sliced images, formatted to look like the original screenshot given for assignment.</p>
+  <p>Part 2: <a href="uxtest-activechecklist.html", alt="Codefellows test part1", target="_blank">Interactive sliced web page</a><br />Assignment: to make the sliced up web page interactive, with the ingredients list (click on each item to see)</p>
+  <p><a href="http://www.brian-dean.com/codefellows/CodeFellows-UX_Test.psd", alt="Photoshop source file for Code Fellows test">PSD source file for sliced up web page screenshot (6.3MB)</a></p>
 </div>
 
 </div>
