changed cursor from arrow to hand

--- a/uxtest-activechecklist.html
+++ b/uxtest-activechecklist.html
@@ -3,6 +3,21 @@
 <title>CodeFellows-UX test files by Brian Dean</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
+<style type="text/css">
+#cb01 {cursor: hand;}
+#cb02 {cursor: hand;}
+#cb03 {cursor: hand;}
+#cb04 {cursor: hand;}
+#cb05 {cursor: hand;}
+#cb06 {cursor: hand;}
+#cb07 {cursor: hand;}
+#cb08 {cursor: hand;}
+#cb09 {cursor: hand;}
+#cb10 {cursor: hand;}
+#cb11 {cursor: hand;}
+#cb12 {cursor: hand;}
+</style>
+
 </head>
 
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
