Stylizing code fellows home page a bit more for fun

--- a/index.html
+++ b/index.html
@@ -3,37 +3,48 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
 <head>
- <title>Index2 delete this Codefellows - Brian Dean - GitHub home page</title>
+ <title>Codefellows - Brian Dean - GitHub home page</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  
  <style type="text/css">
- body {background-color:#111; color:#fff;}
+ body {background-image:url('images/tile2.jpg'); color:#fff;}
  h1 {font-family: "Arial Black"; font-size:26px;}
  h2 {font-family: Arial, Courier; font-size:17px;}
  p {font-family: Arial, Courier;}
- a {color: #FC1501;}
+ a {color: #F60;}
 
-#wrapper {width:820px; margin-right:auto; margin-left:auto; background-color:#555;}
- #header {width:800px; padding:5px; margin-right:auto; margin-left:auto; background-color:#333;}
- #main {height:890px; padding:5px;}
+#wrapper {width:820px; margin-right:auto; margin-left:auto; background-color:#fff;}
+ #header {width:800px; height:90px; padding-left:5px; padding-right:5px; padding-top:7px; margin-right:auto; margin-left:auto; background-image: url('images/header1.jpg'); border-color:#F00; border-width:medium;
+  }
+ #main {height:500px;; padding:5px;}
+ #footer {height:20px;; padding:5px; background-color:#222; text-align:center;}
+#footer p {margin-top:-1px;}
+
+
+ .div1 {width: 800px; padding:5px; margin-right:auto; margin-left:auto; background-color:#555;}
+
  </style>
  
 </head>
 
 <body>
 <div id="wrapper">
-
 <div id="header">
-  <h1>Brian Dean - Code Fellows</h1>
-  <h2>GitHub home page for Code Fellows content</h2>
+  <h1 style="text-decoration:underline; margin-top:12px; font-family: 'Arial Black';">Brian Dean - Code Fellows</h1>
+  <h2 style="margin-top:-17px; font-family: Arial, Courier;"><em>GitHub home page for Code Fellows content</em></h2>
 </div>
 
 <div id="main">
+<div class="div1">
 <h2>UX Engineering Bootcamp test files, completed 3/4/2014:</h2>
   <p>Part 1: <a href="uxtest-slicedpage.html", alt="Codefellows test part1", target="_blank">Sliced web page</a><br />Assignment: to make screenshot of web page for chocolate pizza recipe into an HTML page of sliced images, formatted to look like the original screenshot given for assignment.</p>
   <p>Part 2: <a href="uxtest-activechecklist.html", alt="Codefellows test part1", target="_blank">Interactive sliced web page</a><br />Assignment: to make the sliced up web page interactive, with the ingredients list (click on each item to see)</p>
   <p><a href="http://www.brian-dean.com/codefellows/CodeFellows-UX_Test.psd", alt="Photoshop source file for Code Fellows test">PSD source file for sliced up web page screenshot (6.3MB)</a></p>
 </div>
+
+
+</div>
+<div id="footer"><p>bridean@gmail.com | 206-788-5129 | <a href="http://www.brian-dean.com", target="_blank", alt="Brian's Website" >brian-dean.com</a></p></div>
 
 </div>
   
