--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <div id="main">
 <div class="div1">
 <h2>UX Engineering Bootcamp test files, completed 3/4/2014:</h2>
+  <p>3/5 Update: I've redone part one of the test to make it more like a functional webpage, as opposed to slicing up the screenshot, formatting it &amp; making it still look like a web page. Part 2 was redone as well, somewhat differently than how it was before.</p>
   <p>Part 1: <a href="uxtest-slicedpage.html", alt="Codefellows test part1", target="_blank">Sliced web page</a><br />Assignment: to make screenshot of web page for chocolate pizza recipe into an HTML page of sliced images, formatted to look like the original screenshot given for assignment.</p>
   <p>Part 2: <a href="uxtest-activechecklist.html", alt="Codefellows test part1", target="_blank">Interactive sliced web page</a><br />Assignment: to make the sliced up web page interactive, with the ingredients list (click on each item to see)</p>
   <p><a href="http://www.brian-dean.com/codefellows/CodeFellows-UX_Test.psd", alt="Photoshop source file for Code Fellows test">PSD source file for sliced up web page screenshot (6.3MB)</a></p>
